# automated-trading-system

./: .$diagram.drawio.bkp  .$diagram.drawio.dtmp  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  deny.toml  diagram.drawio  docker-compose.yml  justfile
m-cli/: Cargo.toml
market/: Cargo.toml  config  sqlx-data.json
market/.sqlx/: query-06105eb446630226786aa9cb395342456605b3d5b9113f05c58e2b1e53825a8d.json  query-45cb580d540771c74eafedac2b0608494224662972423ade32d521d8c1871474.json  query-45d639352af2cf1ad500c224875752cd64cde761894d492f43059423c1cdfe54.json  query-846f665c9456fdc78aef89665acdbf82e42ef59b969589f39715e3a1f28b5e2d.json  query-911474cb8176013ea4ad51e7995e06ef829c78149ff679b2ef53bcab0c65d7c9.json  query-a274b77a08a9cd4d669782f602f473aabb560ac9b2bce2a398c4617290b3e5b3.json  query-aba0cf8c26660916fa2365262a1445d90b8bd33f8a3dfca15d733a5cdfea7b67.json  query-b837f1d1f3702589c005dd8a95fe697bc9032168083748df06a6ecdd933a117a.json  query-e609259eef19fcc60d5b1c5978bdcbbedd9733a862c125d22d44a377caba0668.json
market/migrations/: 20230723063323_init.up.sql  20230723073152_initial.up.sql
market/src/: alpaca_client.rs  app_config.rs  auth.rs  broker.rs  broker_client.rs  client.rs  clients.rs  config.rs  core.rs  error.rs  events.rs  handler.rs  lib.rs  main.rs  middleware.rs  objects.rs  strategy.rs  strategy_manager.rs  trade_executor.rs  trade_signal.rs
market/src/api/: alert.rs  error.rs  handlers.rs  mod.rs  objects.rs  pagination.rs  strategy.rs  trading_alert.rs  webhook_receiver.rs
market/src/events/: alert_handler.rs  mod.rs  trade_signal_handler.rs
market/src/strategy_manager/: broker.rs  mod.rs  trade_error.rs
market/src/trade_executor/: alpaca_client.rs  mod.rs
market/tests/: alert.rs  webhook.rs
market/tests/fixtures/: alerts.sql  trading_alert.sql
market/tests/setup/: mod.rs
migrations/: 20230716202914_initial.up.sql
src/: main.rs
