[package]
name = "market"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.29", features = ["full"] }
thiserror = "1.0"
sqlx = { version = "0.6", features = ["chrono", "decimal", "json", "migrate", "offline", "postgres", "uuid", "time"] }
uuid = "1"
tracing = "0.1"
serde_json = { version = "1", features = ["raw_value"] }
reqwest = { version = "0.11.18", features = ["json"], default-features = false }
