[package]
name = "market"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.0"
axum = { version = "0.6.16", features = ["tracing"] }
axum-core = { version = "0.3.4" }
axum-extra = { version = "0.7.5", features = ["cookie"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15"
hyper = "0.14"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
rust_decimal = { version = "1.25", features = ["serde-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.7"
sqlx = { version = "0.6.3", features = ["chrono", "decimal", "json", "migrate", "offline", "postgres", "runtime-tokio-rustls", "uuid", "time"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
termcolor = "1.2"
thiserror = "1"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
uuid = { version = "1.3.0", features = ["serde", "v4"] }
uuid7 = { version = "0.6", features = ["uuid", "serde"] }
validator = "0.16.1"
