[package]
name = "market"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0" }
apca = { path = "/Users/nshv/Repos/apca", optional = true }
axum = { version = "0.6", features = ["tracing", "macros"] }
axum-extra = { version = "0.7.5", features = ["cookie"] }
chrono = { version = "0.4.24", features = ["serde"] }
config = { version = "0.13" }
crypto-botters = { version = "0.5", features = ["bybit"], optional = true }
dotenvy = "0.15"
hyper = "0.14"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"], default-features = false }
rust_decimal = { version = "1.25", features = ["serde-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.1", features = ["chrono", "rust_decimal", "json", "migrate", "postgres", "runtime-tokio-rustls", "uuid", "time"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
termcolor = "1.2"
thiserror = "1"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
uuid = { version = "1.3.0", features = ["serde", "v4"] }
uuid7 = { version = "0.7", features = ["uuid", "serde"] }
[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
# Exchanges
default = ["alpaca"]
alpaca = ["dep:apca"]
bybit = ["dep:crypto-botters"]
